# NAXIS

./: .gitignore  .~lock.Network_Resilience_API_Analysis.xlsx#  COMPLETE_DELIVERY_MANIFEST.md  DELIVERY_PACKAGE_MANIFEST.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile.test  FRONTEND_IMPLEMENTATION.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_EVENTS_DEVICES.md  README.md  START_PLATFORM.md  VERIFICATION_GUIDE.md  demo_end_to_end.py  docker-compose.dev.yml  docker-compose.yml  requirements.txt  roadmap_extracted.txt  roadmap_text.txt  test_correlation_engine.py  test_device_api.py  test_event_api.py  test_event_schema.py  test_incident_api.py  test_incident_schema.py  validate_full_stack.py  validate_schema_syntax.py
.claude/: settings.local.json
backend/: Dockerfile  main.py  worker.py
backend/shared/: README.md  pyproject.toml
backend/shared/correlation/: __init__.py  engine.py  rules.py
backend/shared/database/: __init__.py  client.py  events.py  incidents.py  redis.py
backend/shared/models/: __init__.py  event.py  event_factory.py  incident.py
config/: .env.example
docs/: ARCHITECTURE.md  CORRELATION_ENGINE_COMPLETE.md  DELIVERABLES.md  EVENT_SCHEMA_COMPLETE.md  FRONTEND_COMPLETE.md  FRONTEND_EVENTS_DEVICES.md  INCIDENT_API_COMPLETE.md  MOCK_TELEMETRY_COMPLETE.md  MVP_ARCHITECTURE.md  MVP_STACK_COMPLETE.md  MVP_STRUCTURE.md  MVP_SUMMARY.md  NAXIS_WHITEPAPER.md  PHASE2_EVENT_SCHEMA.md  SETUP_COMPLETE.md  STRUCTURE.md
frontend/: Dockerfile  README.md  next.config.js  next.config.mjs  package-lock.json  package.json  (+1 more)
(+123 files in other folders)
